# jbi

./: .travis.yml  CMakeLists.txt  README.md
ijbi/: CMakeLists.txt  console.cpp  console.h  main.cpp  printer.cpp  printer.h
ijbi/io/: console.cpp  console.h
jbi/: CMakeLists.txt
jbi/algorithm/: pp.h
jbi/core/: exceptions.h  memory.h  none.cpp  none.h  static_visitor.h  string.h  type_traits.h  utility.h  variant.h
jbi/interpreter/: arithmetic_operation.h  evaluator.cpp  evaluator.h  exceptions.h  interpreter.cpp  interpreter.h  iterminal.h  lexer.cpp  lexer.h  statement_evaluator.cpp  statement_evaluator.h  string.h  symbol_table.cpp  symbol_table.h  syntactic_analyser.cpp  syntactic_analyser.h  type.cpp  type.h  value.h
jbi/interpreter/abstract_syntax_tree/: arithmetic_operator.h  assignment_statement.h  expression.h  literals.h  node.h  numbers.h  output_statement.h  statement.h
jbi/interpreter/ast/: arithmetic_operator.h  assignment_statement.h  expression.h  node.h  numbers.h  output_statement.h  statement.h
jbi/interpreter/evaluator/: evaluator.cpp  evaluator.h  expression_evaluator.cpp  expression_evaluator.h  statement_evaluator.cpp  statement_evaluator.h  value_printer.h
jbi/interpreter/evaluator/detail/: arithmetic_operation_performer.h  evaluation_performer.cpp  evaluation_performer.h  numeric_range_builder.h  value_printer.h
jbi/interpreter/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
jbi/interpreter/lexer/flex/: scanner.cpp  scanner.h  scanner.l  scanner_generated.h
jbi/interpreter/lexical_analyser/: lexical_analyser.cpp  lexical_analyser.h  token.h
jbi/interpreter/lexical_analyser/flex/: scanner.cpp  scanner.h  scanner.l  scanner_generated.h
jbi/interpreter/syntax_tree/: arithmetic_operator.h  assignment_statement.h  declaration_statement.h  expression.h  identifier.h  input_statement.h  literals.h  node.h  output_statement.h  range.h  statement.h  visitor.h
jbi/interpreter/types/: none.cpp  none.h  numeric_range.h  range.h  value.h
jbi/variant/: static_visitor.h  variant.h
jbi/visitor/: accept_visitor.h  visitable.h  visitor.h
jbi_tests/: CMakeLists.txt
jbi_tests/algorithm_tests/: pp_tests.cpp
jbi_tests/core_tests/: exceptions_tests.cpp  string_tests.cpp  utility_tests.cpp  variant_tests.cpp
jbi_tests/interpreter_tests/: arithmetic_operation_tests.cpp  interpreter_tests.cpp  string_tests.cpp  symbol_table_tests.cpp  syntactic_analyser_tests.cpp  type_tests.cpp
jbi_tests/interpreter_tests/lexer_tests/: lexer_tests.cpp
jbi_tests/interpreter_tests/lexical_analyser_tests/: lexical_analyser_tests.cpp
jbi_tests/interpreter_tests/types_tests/: numeric_range_tests.cpp  range_tests.cpp
jbi_tests/variant_tests/: variant_tests.cpp
jbi_tests/visitable_tests/: visitable_tests.cpp
